syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.yinan.grpc";
option java_outer_classname = "ResponseInfo";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

package org.yinan.grpc;

message ResultInfo {
  bool success = 1;
  int32 code = 2;
  string message = 3;
}